--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ img {
 
 .header .nav-links {
   list-style: none;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: black;
   padding: 1.5rem 2rem;
   border-radius: 3rem;
 }
@@ -114,7 +114,7 @@ img {
 }
 
 .header .dropdown {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: black;
   padding: 1em 0;
   position: absolute;
   /*WITH RESPECT TO PARENT*/
@@ -135,7 +135,7 @@ img {
 }
 
 .header .dropdown li:hover {
-  background-color: rgba(0, 0, 0, 0.75);
+  background-color: black;
 }
 
 .header .dd-father:hover .dropdown {
@@ -159,11 +159,12 @@ img {
   .header .menu {
     display: none;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: black;
     right: 0;
     left: 0;
     text-align: center;
-    padding: 16px 0;
+    padding: 5rem 0;
+    z-index: 100;
   }
   .header .menu li:hover {
     display: inline-block;
@@ -330,6 +331,22 @@ img {
   color: #9e9e9e;
 }
 
+.about-section .about-container .img-box {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about-section .about-container .img-box .play-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 8rem;
+}
+
 .about-section .about-container .img-box:before {
   content: "";
   position: absolute;
@@ -342,7 +359,6 @@ img {
 }
 
 .about-section .img-right .img-box {
-  position: relative;
   -webkit-transform: translateX(30%);
           transform: translateX(30%);
 }
@@ -362,7 +378,6 @@ img {
   -webkit-box-ordinal-group: 2;
       -ms-flex-order: 1;
           order: 1;
-  position: relative;
   -webkit-transform: translateX(-30%);
           transform: translateX(-30%);
 }
@@ -541,11 +556,17 @@ img {
   .hero .tex-content .container .text-area {
     margin-left: 0;
   }
+  .hero .tex-content .container .text-area .buttons .btn-primary {
+    margin-right: 1rem;
+  }
   .hero .tex-content .container .text-area .primary-heading {
     margin: 2rem 0 5rem;
   }
   .hero .tex-content .container .text-area .description {
     width: auto;
+  }
+  .hero .hero-img {
+    display: none;
   }
   .about-section .about-container {
     -webkit-box-orient: vertical;
@@ -594,10 +615,13 @@ img {
 
 @media (max-width: 592px) {
   html {
-    font-size: 50%;
+    font-size: 58%;
+  }
+  .logo {
+    width: 15rem;
   }
   .slider .slide-text-content {
-    height: 70vh;
+    height: 75vh;
     width: 100%;
   }
 }
