--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ img {
 
 .header .nav-links {
   list-style: none;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.75);
   padding: 1.5rem 2rem;
   border-radius: 3rem;
 }
