--- a/style.scss
+++ b/style.scss
@@ -64,7 +64,7 @@ img {
   }
   .nav-links {
     list-style: none;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.75);
     padding: 1.5rem 2rem;
     border-radius: 3rem;
     a {
