--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&family=Saira&family=Saira+Extra+Condensed:wght@700&display=swap");
-
-/* 
-font-family: 'Raleway', sans-serif;
-font-family: 'Saira', sans-serif;
-font-family: 'Saira Extra Condensed', sans-serif;
-*/
+// ========
+// CSS Global
+// ========
 * {
   margin: 0;
   padding: 0;
@@ -46,7 +43,9 @@ img {
   transition: 0.2s;
 }
 
-// header section
+// =============
+// Header Starts
+// =============
 .header {
   position: absolute;
   padding: 3rem 0;
@@ -166,8 +165,13 @@ img {
   }
 }
 
-// hero section design
+// =============
+// Header Ends
+// =============
 
+// =============
+// Hero Starts
+// =============
 .hero {
   display: flex;
   height: calc(100vh + 10rem);
@@ -178,7 +182,6 @@ img {
   .tex-content {
     width: 45%;
     .container {
-      // width: 71%;
       position: relative;
       top: 60%;
       transform: translateY(-50%);
@@ -251,11 +254,16 @@ img {
   }
 }
 
-/* About Us Section starts */
+// =============
+// Hero Ends
+// =============
+
+// =============
+// About Section Starts
+// =============
 
 .about-section {
   width: 85%;
-  // width: 92%;
   margin: 13.7rem auto 13.7rem;
   padding: 9.6rem 0;
   background-color: #f5f5f5;
@@ -270,7 +278,6 @@ img {
     .text-box {
       width: 60%;
       .details-text {
-        // width: 60rem;
         font-family: Raleway;
         font-weight: 500;
         font-size: 1.8rem;
@@ -339,7 +346,13 @@ img {
   writing-mode: vertical-rl;
 }
 
-/* About Us Section ends */
+// =================
+// About Section Ends
+// =================
+
+// =================
+// Slider Section Starts
+// =================
 
 .slider {
   position: relative;
@@ -440,6 +453,16 @@ img {
   }
 }
 
+// =================
+// Slider Section Ends
+// =================
+
+// ======================== Responsive =========================//
+
+// =================
+// For Tablets
+// =================
+
 @media (max-width: 1200px) {
   html {
     font-size: 80%;
@@ -509,6 +532,11 @@ img {
     }
   }
 }
+
+// =================
+// For SmartPhones
+// =================
+
 @media (max-width: 592px) {
   html {
     font-size: 58%;
